// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack-base returns expected dev configs 1`] = `
Object {
  "context": "/test",
  "devServer": Object {
    "contentBase": "/test/static",
    "historyApiFallback": true,
    "hot": true,
    "noInfo": true,
    "open": false,
    "overlay": Object {
      "errors": true,
      "warnings": false,
    },
    "port": 3000,
  },
  "devtool": "eval-source-map",
  "entry": "/test/src/index.js",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "include": Array [
          "/test/src",
        ],
        "test": /\\\\\\.\\(jsx\\?\\|tsx\\?\\)\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "cacheDirectory": true,
            },
          },
          Object {
            "loader": "eslint-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.mdx\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
          },
          Object {
            "loader": "@mdx-js/loader",
            "options": Object {
              "rehypePlugins": Array [],
              "remarkPlugins": Array [],
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.scss\\$/,
        "use": Array [
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "modules": Object {
                "localIdentName": "[name]-[local]--[hash:5]",
                "mode": "global",
              },
              "sourceMap": true,
            },
          },
          Object {
            "loader": "sass-loader",
            "options": Object {
              "sassOptions": Object {},
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "include": Array [
          "/test/src/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "svg-symbol-sprite-loader",
          },
        ],
      },
      Object {
        "exclude": Array [
          "/test/src/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "@svgr/webpack",
            "options": Object {
              "svgo": true,
              "svgoConfig": Object {
                "plugins": Array [
                  Object {
                    "removeViewBox": false,
                  },
                ],
              },
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\)\\$/i,
        "use": Array [
          Object {
            "loader": "file-loader",
            "options": Object {
              "name": "static/media/[name].[hash:8].[ext]",
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.txt\\$/,
        "use": Array [
          Object {
            "loader": "raw-loader",
          },
        ],
      },
    ],
  },
  "optimization": Object {
    "moduleIds": "hashed",
    "runtimeChunk": "single",
    "splitChunks": Object {
      "chunks": "all",
    },
  },
  "output": Object {
    "filename": "static/js/[name].js",
    "hashDigestLength": 12,
    "path": "/test/public",
    "publicPath": "/",
  },
  "plugins": Array [
    CaseSensitivePathsPlugin {
      "options": undefined,
    },
    ProgressBarPlugin {
      "options": Object {
        "callback": [Function],
        "clear": false,
        "format": "  Hacking time... [:bar] :percent (:elapsed seconds) :msg",
      },
    },
    EnvironmentPlugin {
      "defaultValues": Object {
        "DEBUG": false,
        "PUBLIC_PATH": "/",
      },
      "keys": Array [
        "DEBUG",
        "PUBLIC_PATH",
      ],
    },
    CopyPlugin {
      "options": Object {},
      "patterns": Array [
        "/test/static",
      ],
    },
    HtmlWebpackPlugin {
      "assetJson": undefined,
      "childCompilerHash": undefined,
      "hash": undefined,
      "options": Object {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": "/test/static/favicon.ico",
        "filename": "index.html",
        "hash": false,
        "inject": true,
        "meta": Object {},
        "minify": false,
        "scriptLoading": "blocking",
        "showErrors": true,
        "template": "/test/src/index.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Webpack App",
        "xhtml": false,
      },
      "version": 4,
    },
    SVGSymbolSpritePlugin {
      "options": Object {
        "filename": "static/media/icon-sprite.svg",
        "injectSpriteId": true,
      },
    },
    HotModuleReplacementPlugin {
      "fullBuildTimeout": 200,
      "multiStep": undefined,
      "options": Object {},
      "requestTimeout": 10000,
    },
    FriendlyErrorsWebpackPlugin {
      "compilationSuccessInfo": Object {
        "messages": Array [
          "  🎉  BINGO 🎉",
          "  Application running at http://localhost:3000",
        ],
        "notes": Array [
          "webpack output is served from /",
          "Content not from webpack is served from /test/static",
          "404s will fallback to /index.html",
        ],
      },
      "formatters": Array [
        [Function],
        [Function],
        [Function],
      ],
      "onErrors": undefined,
      "shouldClearConsole": true,
      "transformers": Array [
        [Function],
        [Function],
        [Function],
      ],
    },
  ],
  "resolve": Object {
    "alias": Object {},
    "extensions": Array [
      ".js",
      ".jsx",
      ".json",
      ".ts",
      ".tsx",
    ],
  },
}
`;

exports[`webpack-base returns expected electron dev configs 1`] = `
Object {
  "context": "/test",
  "devServer": Object {
    "contentBase": "/test/static",
    "historyApiFallback": true,
    "hot": true,
    "noInfo": true,
    "open": false,
    "overlay": Object {
      "errors": true,
      "warnings": false,
    },
    "port": 3000,
  },
  "devtool": "eval-source-map",
  "entry": "/test/src/renderer/index.js",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "include": Array [
          "/test/src/renderer",
        ],
        "test": /\\\\\\.\\(jsx\\?\\|tsx\\?\\)\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "cacheDirectory": true,
            },
          },
          Object {
            "loader": "eslint-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.mdx\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
          },
          Object {
            "loader": "@mdx-js/loader",
            "options": Object {
              "rehypePlugins": Array [],
              "remarkPlugins": Array [],
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.scss\\$/,
        "use": Array [
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "modules": Object {
                "localIdentName": "[name]-[local]--[hash:5]",
                "mode": "global",
              },
              "sourceMap": true,
            },
          },
          Object {
            "loader": "sass-loader",
            "options": Object {
              "sassOptions": Object {},
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "include": Array [
          "/test/src/renderer/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "svg-symbol-sprite-loader",
          },
        ],
      },
      Object {
        "exclude": Array [
          "/test/src/renderer/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "@svgr/webpack",
            "options": Object {
              "svgo": true,
              "svgoConfig": Object {
                "plugins": Array [
                  Object {
                    "removeViewBox": false,
                  },
                ],
              },
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\)\\$/i,
        "use": Array [
          Object {
            "loader": "file-loader",
            "options": Object {
              "name": "static/media/[name].[hash:8].[ext]",
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.txt\\$/,
        "use": Array [
          Object {
            "loader": "raw-loader",
          },
        ],
      },
    ],
  },
  "optimization": Object {
    "moduleIds": "hashed",
    "runtimeChunk": "single",
    "splitChunks": Object {
      "chunks": "all",
    },
  },
  "output": Object {
    "filename": "static/js/[name].js",
    "hashDigestLength": 12,
    "libraryTarget": "commonjs2",
    "path": "/test/src/build",
    "publicPath": "/",
  },
  "plugins": Array [
    CaseSensitivePathsPlugin {
      "options": undefined,
    },
    ProgressBarPlugin {
      "options": Object {
        "callback": [Function],
        "clear": false,
        "format": "  Hacking time... [:bar] :percent (:elapsed seconds) :msg",
      },
    },
    EnvironmentPlugin {
      "defaultValues": Object {
        "DEBUG": false,
        "PUBLIC_PATH": "/",
      },
      "keys": Array [
        "DEBUG",
        "PUBLIC_PATH",
      ],
    },
    CopyPlugin {
      "options": Object {},
      "patterns": Array [
        "/test/static",
      ],
    },
    HtmlWebpackPlugin {
      "assetJson": undefined,
      "childCompilerHash": undefined,
      "hash": undefined,
      "options": Object {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": "/test/static/favicon.ico",
        "filename": "index.html",
        "hash": false,
        "inject": false,
        "meta": Object {},
        "minify": false,
        "scriptLoading": "blocking",
        "showErrors": true,
        "template": "/test/src/renderer/index.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Webpack App",
        "xhtml": false,
      },
      "version": 4,
    },
    SVGSymbolSpritePlugin {
      "options": Object {
        "filename": "static/media/icon-sprite.svg",
        "injectSpriteId": false,
      },
    },
    HotModuleReplacementPlugin {
      "fullBuildTimeout": 200,
      "multiStep": undefined,
      "options": Object {},
      "requestTimeout": 10000,
    },
    FriendlyErrorsWebpackPlugin {
      "compilationSuccessInfo": Object {
        "messages": Array [
          "  🎉  BINGO 🎉",
          "  Application running at http://localhost:3000",
        ],
        "notes": Array [
          "webpack output is served from /",
          "Content not from webpack is served from /test/static",
          "404s will fallback to /index.html",
        ],
      },
      "formatters": Array [
        [Function],
        [Function],
        [Function],
      ],
      "onErrors": undefined,
      "shouldClearConsole": true,
      "transformers": Array [
        [Function],
        [Function],
        [Function],
      ],
    },
  ],
  "resolve": Object {
    "alias": Object {},
    "extensions": Array [
      ".js",
      ".jsx",
      ".json",
      ".ts",
      ".tsx",
    ],
  },
  "target": "electron-renderer",
}
`;

exports[`webpack-base returns expected electron prod configs 1`] = `
Object {
  "bail": true,
  "context": "/test",
  "devtool": "source-map",
  "entry": "/test/src/renderer/index.js",
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "include": Array [
          "/test/src/renderer",
        ],
        "test": /\\\\\\.\\(jsx\\?\\|tsx\\?\\)\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "cacheDirectory": true,
            },
          },
          Object {
            "loader": "eslint-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.mdx\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
          },
          Object {
            "loader": "@mdx-js/loader",
            "options": Object {
              "rehypePlugins": Array [],
              "remarkPlugins": Array [],
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.scss\\$/,
        "use": Array [
          "/test/path/to/mini-css-extract-loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "modules": Object {
                "localIdentName": "[name]-[local]--[hash:5]",
                "mode": "global",
              },
              "sourceMap": true,
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "plugins": Array [
                [Function],
              ],
              "sourceMap": true,
            },
          },
          Object {
            "loader": "sass-loader",
            "options": Object {
              "sassOptions": Object {},
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "include": Array [
          "/test/src/renderer/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "svg-symbol-sprite-loader",
          },
        ],
      },
      Object {
        "exclude": Array [
          "/test/src/renderer/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "@svgr/webpack",
            "options": Object {
              "svgo": true,
              "svgoConfig": Object {
                "plugins": Array [
                  Object {
                    "removeViewBox": false,
                  },
                ],
              },
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\)\\$/i,
        "use": Array [
          Object {
            "loader": "file-loader",
            "options": Object {
              "name": "static/media/[name].[hash:8].[ext]",
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.txt\\$/,
        "use": Array [
          Object {
            "loader": "raw-loader",
          },
        ],
      },
    ],
  },
  "optimization": Object {
    "moduleIds": "hashed",
    "runtimeChunk": "single",
    "splitChunks": Object {
      "chunks": "all",
    },
  },
  "output": Object {
    "filename": "static/js/[name].[contenthash].js",
    "hashDigestLength": 12,
    "libraryTarget": "commonjs2",
    "path": "/test/src/build",
    "publicPath": "/",
  },
  "performance": Object {
    "assetFilter": [Function],
    "hints": "warning",
    "maxAssetSize": 275000,
    "maxEntrypointSize": 500000,
  },
  "plugins": Array [
    CaseSensitivePathsPlugin {
      "options": undefined,
    },
    ProgressBarPlugin {
      "options": Object {
        "callback": [Function],
        "clear": false,
        "format": "  Hacking time... [:bar] :percent (:elapsed seconds) :msg",
      },
    },
    EnvironmentPlugin {
      "defaultValues": Object {
        "DEBUG": false,
        "PUBLIC_PATH": "/",
      },
      "keys": Array [
        "DEBUG",
        "PUBLIC_PATH",
      ],
    },
    CopyPlugin {
      "options": Object {},
      "patterns": Array [
        "/test/static",
      ],
    },
    HtmlWebpackPlugin {
      "assetJson": undefined,
      "childCompilerHash": undefined,
      "hash": undefined,
      "options": Object {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": "/test/static/favicon.ico",
        "filename": "index.html",
        "hash": false,
        "inject": false,
        "meta": Object {},
        "minify": false,
        "scriptLoading": "blocking",
        "showErrors": true,
        "template": "/test/src/renderer/index.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Webpack App",
        "xhtml": false,
      },
      "version": 4,
    },
    SVGSymbolSpritePlugin {
      "options": Object {
        "filename": "static/media/icon-sprite.[contenthash].svg",
        "injectSpriteId": false,
      },
    },
    NamedModulesPlugin {
      "options": Object {},
    },
    CleanWebpackPlugin {
      "apply": [Function],
      "cleanAfterEveryBuildPatterns": Array [],
      "cleanOnceBeforeBuildPatterns": Array [
        "**/*",
      ],
      "cleanStaleWebpackAssets": true,
      "currentAssets": Array [],
      "dangerouslyAllowCleanPatternsOutsideProject": false,
      "dry": false,
      "handleDone": [Function],
      "handleInitial": [Function],
      "initialClean": false,
      "outputPath": "",
      "protectWebpackAssets": true,
      "removeFiles": [Function],
      "verbose": false,
    },
    DuplicatePackageCheckerPlugin {
      "options": Object {
        "emitError": false,
        "exclude": null,
        "showHelp": true,
        "strict": true,
        "verbose": true,
      },
    },
    MiniCSSExtractPlugin {
      "options": Object {
        "chunkFilename": "static/css/[name].[contenthash].css",
        "filename": "static/css/[name].[contenthash].css",
      },
    },
  ],
  "resolve": Object {
    "alias": Object {},
    "extensions": Array [
      ".js",
      ".jsx",
      ".json",
      ".ts",
      ".tsx",
    ],
  },
  "stats": Object {
    "excludeAssets": [Function],
    "modules": false,
  },
  "target": "electron-renderer",
}
`;

exports[`webpack-base returns expected prod configs 1`] = `
Object {
  "bail": true,
  "context": "/test",
  "devtool": "source-map",
  "entry": "/test/src/index.js",
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "include": Array [
          "/test/src",
        ],
        "test": /\\\\\\.\\(jsx\\?\\|tsx\\?\\)\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "cacheDirectory": true,
            },
          },
          Object {
            "loader": "eslint-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.mdx\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
          },
          Object {
            "loader": "@mdx-js/loader",
            "options": Object {
              "rehypePlugins": Array [],
              "remarkPlugins": Array [],
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.scss\\$/,
        "use": Array [
          "/test/path/to/mini-css-extract-loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "modules": Object {
                "localIdentName": "[name]-[local]--[hash:5]",
                "mode": "global",
              },
              "sourceMap": true,
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "plugins": Array [
                [Function],
              ],
              "sourceMap": true,
            },
          },
          Object {
            "loader": "sass-loader",
            "options": Object {
              "sassOptions": Object {},
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "include": Array [
          "/test/src/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "svg-symbol-sprite-loader",
          },
        ],
      },
      Object {
        "exclude": Array [
          "/test/src/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "@svgr/webpack",
            "options": Object {
              "svgo": true,
              "svgoConfig": Object {
                "plugins": Array [
                  Object {
                    "removeViewBox": false,
                  },
                ],
              },
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\)\\$/i,
        "use": Array [
          Object {
            "loader": "file-loader",
            "options": Object {
              "name": "static/media/[name].[hash:8].[ext]",
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.txt\\$/,
        "use": Array [
          Object {
            "loader": "raw-loader",
          },
        ],
      },
    ],
  },
  "optimization": Object {
    "moduleIds": "hashed",
    "runtimeChunk": "single",
    "splitChunks": Object {
      "chunks": "all",
    },
  },
  "output": Object {
    "filename": "static/js/[name].[contenthash].js",
    "hashDigestLength": 12,
    "path": "/test/public",
    "publicPath": "/",
  },
  "performance": Object {
    "assetFilter": [Function],
    "hints": "warning",
    "maxAssetSize": 275000,
    "maxEntrypointSize": 500000,
  },
  "plugins": Array [
    CaseSensitivePathsPlugin {
      "options": undefined,
    },
    ProgressBarPlugin {
      "options": Object {
        "callback": [Function],
        "clear": false,
        "format": "  Hacking time... [:bar] :percent (:elapsed seconds) :msg",
      },
    },
    EnvironmentPlugin {
      "defaultValues": Object {
        "DEBUG": false,
        "PUBLIC_PATH": "/",
      },
      "keys": Array [
        "DEBUG",
        "PUBLIC_PATH",
      ],
    },
    CopyPlugin {
      "options": Object {},
      "patterns": Array [
        "/test/static",
      ],
    },
    HtmlWebpackPlugin {
      "assetJson": undefined,
      "childCompilerHash": undefined,
      "hash": undefined,
      "options": Object {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": "/test/static/favicon.ico",
        "filename": "index.html",
        "hash": false,
        "inject": true,
        "meta": Object {},
        "minify": false,
        "scriptLoading": "blocking",
        "showErrors": true,
        "template": "/test/src/index.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Webpack App",
        "xhtml": false,
      },
      "version": 4,
    },
    SVGSymbolSpritePlugin {
      "options": Object {
        "filename": "static/media/icon-sprite.[contenthash].svg",
        "injectSpriteId": true,
      },
    },
    NamedModulesPlugin {
      "options": Object {},
    },
    CleanWebpackPlugin {
      "apply": [Function],
      "cleanAfterEveryBuildPatterns": Array [],
      "cleanOnceBeforeBuildPatterns": Array [
        "**/*",
      ],
      "cleanStaleWebpackAssets": true,
      "currentAssets": Array [],
      "dangerouslyAllowCleanPatternsOutsideProject": false,
      "dry": false,
      "handleDone": [Function],
      "handleInitial": [Function],
      "initialClean": false,
      "outputPath": "",
      "protectWebpackAssets": true,
      "removeFiles": [Function],
      "verbose": false,
    },
    DuplicatePackageCheckerPlugin {
      "options": Object {
        "emitError": false,
        "exclude": null,
        "showHelp": true,
        "strict": true,
        "verbose": true,
      },
    },
    MiniCSSExtractPlugin {
      "options": Object {
        "chunkFilename": "static/css/[name].[contenthash].css",
        "filename": "static/css/[name].[contenthash].css",
      },
    },
  ],
  "resolve": Object {
    "alias": Object {},
    "extensions": Array [
      ".js",
      ".jsx",
      ".json",
      ".ts",
      ".tsx",
    ],
  },
  "stats": Object {
    "excludeAssets": [Function],
    "modules": false,
  },
}
`;

exports[`webpack-base returns expected storybook configs 1`] = `
Object {
  "context": "/test",
  "devServer": Object {
    "contentBase": "/test/static",
    "historyApiFallback": true,
    "hot": true,
    "noInfo": true,
    "open": false,
    "overlay": Object {
      "errors": true,
      "warnings": false,
    },
    "port": 3000,
  },
  "devtool": "eval-source-map",
  "entry": "/test/src/index.js",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "include": Array [
          "/test/src",
        ],
        "test": /\\\\\\.\\(jsx\\?\\|tsx\\?\\)\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "cacheDirectory": true,
            },
          },
          Object {
            "loader": "eslint-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.mdx\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
          },
          Object {
            "loader": "@mdx-js/loader",
            "options": Object {
              "rehypePlugins": Array [],
              "remarkPlugins": Array [],
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.scss\\$/,
        "use": Array [
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "modules": Object {
                "localIdentName": "[name]-[local]--[hash:5]",
                "mode": "global",
              },
              "sourceMap": true,
            },
          },
          Object {
            "loader": "sass-loader",
            "options": Object {
              "sassOptions": Object {},
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "include": Array [
          "/test/src/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "svg-symbol-sprite-loader",
          },
        ],
      },
      Object {
        "exclude": Array [
          "/test/src/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "@svgr/webpack",
            "options": Object {
              "svgo": true,
              "svgoConfig": Object {
                "plugins": Array [
                  Object {
                    "removeViewBox": false,
                  },
                ],
              },
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\)\\$/i,
        "use": Array [
          Object {
            "loader": "file-loader",
            "options": Object {
              "name": "static/media/[name].[hash:8].[ext]",
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.txt\\$/,
        "use": Array [
          Object {
            "loader": "raw-loader",
          },
        ],
      },
    ],
  },
  "optimization": Object {
    "moduleIds": "hashed",
    "runtimeChunk": "single",
    "splitChunks": Object {
      "chunks": "all",
    },
  },
  "output": Object {
    "filename": "static/js/[name].js",
    "hashDigestLength": 12,
    "path": "/test/public",
    "publicPath": "/",
  },
  "plugins": Array [
    CaseSensitivePathsPlugin {
      "options": undefined,
    },
    ProgressBarPlugin {
      "options": Object {
        "callback": [Function],
        "clear": false,
        "format": "  Hacking time... [:bar] :percent (:elapsed seconds) :msg",
      },
    },
    EnvironmentPlugin {
      "defaultValues": Object {
        "DEBUG": false,
        "PUBLIC_PATH": "/",
      },
      "keys": Array [
        "DEBUG",
        "PUBLIC_PATH",
      ],
    },
    CopyPlugin {
      "options": Object {},
      "patterns": Array [
        "/test/static",
      ],
    },
    HtmlWebpackPlugin {
      "assetJson": undefined,
      "childCompilerHash": undefined,
      "hash": undefined,
      "options": Object {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": "/test/static/favicon.ico",
        "filename": "index.html",
        "hash": false,
        "inject": true,
        "meta": Object {},
        "minify": false,
        "scriptLoading": "blocking",
        "showErrors": true,
        "template": "/test/src/index.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Webpack App",
        "xhtml": false,
      },
      "version": 4,
    },
    SVGSymbolSpritePlugin {
      "options": Object {
        "filename": "static/media/icon-sprite.svg",
        "injectSpriteId": false,
      },
    },
    HotModuleReplacementPlugin {
      "fullBuildTimeout": 200,
      "multiStep": undefined,
      "options": Object {},
      "requestTimeout": 10000,
    },
    FriendlyErrorsWebpackPlugin {
      "compilationSuccessInfo": Object {
        "messages": Array [
          "  🎉  BINGO 🎉",
          "  Application running at http://localhost:3000",
        ],
        "notes": Array [
          "webpack output is served from /",
          "Content not from webpack is served from /test/static",
          "404s will fallback to /index.html",
        ],
      },
      "formatters": Array [
        [Function],
        [Function],
        [Function],
      ],
      "onErrors": undefined,
      "shouldClearConsole": true,
      "transformers": Array [
        [Function],
        [Function],
        [Function],
      ],
    },
  ],
  "resolve": Object {
    "alias": Object {},
    "extensions": Array [
      ".js",
      ".jsx",
      ".json",
      ".ts",
      ".tsx",
    ],
  },
}
`;

exports[`webpack-base returns loader and plugin components 1`] = `
Object {
  "loaders": Object {
    "fileLoader": Object {
      "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\)\\$/i,
      "use": Array [
        Object {
          "loader": "file-loader",
          "options": Object {
            "name": "static/media/[name].[hash:8].[ext]",
          },
        },
      ],
    },
    "jsLoader": Object {
      "include": Array [
        "/test/src",
      ],
      "test": /\\\\\\.\\(jsx\\?\\|tsx\\?\\)\\$/,
      "use": Array [
        Object {
          "loader": "babel-loader",
          "options": Object {
            "cacheDirectory": true,
          },
        },
        Object {
          "loader": "eslint-loader",
        },
      ],
    },
    "mdxLoader": Object {
      "test": /\\\\\\.mdx\\$/,
      "use": Array [
        Object {
          "loader": "babel-loader",
        },
        Object {
          "loader": "@mdx-js/loader",
          "options": Object {
            "rehypePlugins": Array [],
            "remarkPlugins": Array [],
          },
        },
      ],
    },
    "rawLoader": Object {
      "test": /\\\\\\.txt\\$/,
      "use": Array [
        Object {
          "loader": "raw-loader",
        },
      ],
    },
    "sassLoader": Object {
      "test": /\\\\\\.scss\\$/,
      "use": Array [
        Object {
          "loader": "style-loader",
        },
        Object {
          "loader": "css-loader",
          "options": Object {
            "modules": Object {
              "localIdentName": "[name]-[local]--[hash:5]",
              "mode": "global",
            },
            "sourceMap": true,
          },
        },
        Object {
          "loader": "sass-loader",
          "options": Object {
            "sassOptions": Object {},
            "sourceMap": true,
          },
        },
      ],
    },
    "svgComponentLoader": Object {
      "exclude": Array [
        "/test/src/media/icons",
      ],
      "test": /\\\\\\.svg\\$/,
      "use": Array [
        Object {
          "loader": "@svgr/webpack",
          "options": Object {
            "svgo": true,
            "svgoConfig": Object {
              "plugins": Array [
                Object {
                  "removeViewBox": false,
                },
              ],
            },
          },
        },
      ],
    },
    "svgSpriteLoader": Object {
      "include": Array [
        "/test/src/media/icons",
      ],
      "test": /\\\\\\.svg\\$/,
      "use": Array [
        Object {
          "loader": "svg-symbol-sprite-loader",
        },
      ],
    },
  },
  "plugins": Object {
    "caseSensitivePathsPlugin": CaseSensitivePathsPlugin {
      "options": undefined,
    },
    "copyPlugin": CopyPlugin {
      "options": Object {},
      "patterns": Array [
        "/test/static",
      ],
    },
    "environmentPlugin": EnvironmentPlugin {
      "defaultValues": Object {
        "DEBUG": false,
        "PUBLIC_PATH": "/",
      },
      "keys": Array [
        "DEBUG",
        "PUBLIC_PATH",
      ],
    },
    "friendlyErrorsPlugin": FriendlyErrorsWebpackPlugin {
      "compilationSuccessInfo": Object {
        "messages": Array [
          "  🎉  BINGO 🎉",
          "  Application running at http://localhost:3000",
        ],
        "notes": Array [
          "webpack output is served from /",
          "Content not from webpack is served from /test/static",
          "404s will fallback to /index.html",
        ],
      },
      "formatters": Array [
        [Function],
        [Function],
        [Function],
      ],
      "onErrors": undefined,
      "shouldClearConsole": true,
      "transformers": Array [
        [Function],
        [Function],
        [Function],
      ],
    },
    "hotModuleReplacementPlugin": HotModuleReplacementPlugin {
      "fullBuildTimeout": 200,
      "multiStep": undefined,
      "options": Object {},
      "requestTimeout": 10000,
    },
    "htmlPlugin": HtmlWebpackPlugin {
      "assetJson": undefined,
      "childCompilerHash": undefined,
      "hash": undefined,
      "options": Object {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": "/test/static/favicon.ico",
        "filename": "index.html",
        "hash": false,
        "inject": true,
        "meta": Object {},
        "minify": false,
        "scriptLoading": "blocking",
        "showErrors": true,
        "template": "/test/src/index.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Webpack App",
        "xhtml": false,
      },
      "version": 4,
    },
    "progressBarPlugin": ProgressBarPlugin {
      "options": Object {
        "callback": [Function],
        "clear": false,
        "format": "  Hacking time... [:bar] :percent (:elapsed seconds) :msg",
      },
    },
    "svgSymbolSpritePlugin": SVGSymbolSpritePlugin {
      "options": Object {
        "filename": "static/media/icon-sprite.svg",
        "injectSpriteId": true,
      },
    },
  },
}
`;
